--- a/make/photon/prepare/templates/docker_compose/docker-compose.yml.jinja
+++ b/make/photon/prepare/templates/docker_compose/docker-compose.yml.jinja
@@ -2,9 +2,16 @@ version: '2'
 services:
   log:
     image: goharbor/harbor-log:{{version}}
-    container_name: harbor-log 
+    container_name: harbor-log
     restart: always
     dns_search: .
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - DAC_OVERRIDE
+      - SETGID
+      - SETUID
     volumes:
       - {{log_location}}/:/var/log/docker/:z
       - ./common/config/log/:/etc/logrotate.d/:z
@@ -16,6 +23,12 @@ services:
     image: goharbor/registry-photon:{{reg_version}}
     container_name: registry
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     volumes:
       - {{data_volume}}/registry:/storage:z
       - ./common/config/registry/:/etc/registry/:z
@@ -39,6 +52,12 @@ services:
     env_file:
       - ./common/config/registryctl/env
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     volumes:
       - {{data_volume}}/registry:/storage:z
       - ./common/config/registry/:/etc/registry/:z
@@ -57,6 +76,13 @@ services:
     image: goharbor/harbor-db:{{version}}
     container_name: harbor-db
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - DAC_OVERRIDE
+      - SETGID
+      - SETUID
     volumes:
       - {{data_volume}}/database:/var/lib/postgresql/data:z
     networks:
@@ -81,32 +107,18 @@ services:
       options:  
         syslog-address: "tcp://127.0.0.1:1514"
         tag: "postgresql"
-  adminserver:
-    image: goharbor/harbor-adminserver:{{version}}
-    container_name: harbor-adminserver
-    env_file:
-      - ./common/config/adminserver/env
-    restart: always
-    volumes:
-      - {{data_volume}}/config/:/etc/adminserver/config/:z
-      - {{secretkey_path}}/secretkey:/etc/adminserver/key:z
-      - {{data_volume}}/:/data/:z
-    networks:
-      - harbor
-    dns_search: .
-    depends_on:
-      - log
-    logging:
-      driver: "syslog"
-      options:  
-        syslog-address: "tcp://127.0.0.1:1514"
-        tag: "adminserver"
   core:
     image: goharbor/harbor-core:{{version}}
     container_name: harbor-core
     env_file:
       - ./common/config/core/env
+      - ./common/config/core/config_env
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - SETGID
+      - SETUID
     volumes:
       - ./common/config/core/app.conf:/etc/core/app.conf:z
       - ./common/config/core/private_key.pem:/etc/core/private_key.pem:z
@@ -133,7 +145,6 @@ services:
     dns_search: .
     depends_on:
       - log
-      - adminserver
       - registry
     logging:
       driver: "syslog"
@@ -144,6 +155,13 @@ services:
     image: goharbor/harbor-portal:{{version}}
     container_name: harbor-portal
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+      - NET_BIND_SERVICE
     networks:
       - harbor
     dns_search: .
@@ -162,6 +180,12 @@ services:
     env_file:
       - ./common/config/jobservice/env
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     volumes:
       - {{data_volume}}/job_logs:/var/log/jobs:z
       - ./common/config/jobservice/config.yml:/etc/jobservice/config.yml:z
@@ -174,7 +198,6 @@ services:
     depends_on:
       - redis
       - core
-      - adminserver
     logging:
       driver: "syslog"
       options:
@@ -184,6 +207,12 @@ services:
     image: goharbor/redis-photon:{{redis_version}}
     container_name: redis
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
     volumes:
       - {{data_volume}}/redis:/var/lib/redis
     networks:
@@ -205,6 +234,13 @@ services:
     image: goharbor/nginx-photon:{{redis_version}}
     container_name: nginx
     restart: always
+    cap_drop:
+      - ALL
+    cap_add:
+      - CHOWN
+      - SETGID
+      - SETUID
+      - NET_BIND_SERVICE
     volumes:
       - ./common/config/nginx:/etc/nginx:z
       - {{cert_key_path}}:/etc/nginx/cert/server.key
