--- a/src/portal/src/app/project/robot-account/robot-account.component.html
+++ b/src/portal/src/app/project/robot-account/robot-account.component.html
@@ -43,6 +43,7 @@
     <clr-datagrid [(clrDgSelected)]="selectedRow" [clrDgLoading]="loading">
       <clr-dg-column>{{'ROBOT_ACCOUNT.NAME' | translate}}</clr-dg-column>
       <clr-dg-column>{{'ROBOT_ACCOUNT.ENABLED_STATE' | translate}}</clr-dg-column>
+      <clr-dg-column>{{'ROBOT_ACCOUNT.EXPIRATION' | translate}}</clr-dg-column>
       <clr-dg-column>{{'ROBOT_ACCOUNT.DESCRIPTION' | translate}}</clr-dg-column>
       <clr-dg-row *clrDgItems="let r of robots" [clrDgItem]="r">
         <clr-dg-cell>{{r.name}}</clr-dg-cell>
@@ -50,6 +51,7 @@
           <clr-icon shape="check-circle" *ngSwitchCase="false" size="20" class="color-green"></clr-icon>
           <clr-icon shape="times-circle" *ngSwitchCase="true" size="16" class="color-red red-position"></clr-icon>
         </clr-dg-cell>
+        <clr-dg-cell>{{r.expiresat * 1000 | date: 'short'}}</clr-dg-cell>
         <clr-dg-cell>{{r.description}}</clr-dg-cell>
       </clr-dg-row>
       <clr-dg-footer>
