--- a/make/photon/prepare/templates/docker_compose/docker-compose.yml.jinja
+++ b/make/photon/prepare/templates/docker_compose/docker-compose.yml.jinja
@@ -282,6 +282,8 @@ services:
     dns_search: .
     volumes:
       - ./common/config/notary:/etc/notary:z
+      - {{data_volume}}/secret/notary/notary-signer-ca.crt:/etc/notary/notary-signer-ca.crt:z
+      - {{data_volume}}/secret/registry/root.crt:/etc/notary/root.crt:z
     env_file:
       - ./common/config/notary/server_env
     depends_on:
@@ -304,6 +306,8 @@ services:
     dns_search: .
     volumes:
       - ./common/config/notary:/etc/notary:z
+      - {{data_volume}}/secret/notary/notary-signer.crt:/etc/notary/notary-signer.crt:z
+      - {{data_volume}}/secret/notary/notary-signer.key:/etc/notary/notary-signer.key:z
     env_file:
       - ./common/config/notary/signer_env
     depends_on:
