--- a/src/portal/src/app/project/member/add-member/add-member.component.scss
+++ b/src/portal/src/app/project/member/add-member/add-member.component.scss
@@ -24,3 +24,8 @@
     background-image: linear-gradient(180deg,#f5f5f5 0,#e8e8e8);
     background-repeat: repeat-x;
 }
+.modal-body{
+    overflow: visible;
+}
+
+
